--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Array</title>
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="Task2.html">Task2</a></li>
+    </ul>
     <script>
         var states = ["Oyo", "Osun", "Lagos", "Ogun", "Ondo"];
 
