--- a/Task2.html
+++ b/Task2.html
@@ -6,6 +6,10 @@
     <title>Task 2</title>
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="Task2.html">Task2</a></li>
+    </ul>
     <script>
         var inputNum;
         var counter = 1;
